# testi18n

./: LICENSE  README.md  environment.yml  setup.cfg  setup.py
testi18n/: testi18n.py  trclass.py
testi18n/locale/: testi18n.pot
testi18n/locale/en_UK/LC_MESSAGES/: messages.po
testi18n/locale/en_US/LC_MESSAGES/: messages.po
testi18n/locale/it_IT/LC_MESSAGES/: messages.po
