[metadata]
description-file = README.md

[init_catalog]
input_file = testi18n/locale/testi18n.pot
output_dir = testi18n/locale

[extract_messages]
input_dirs = testi18n
output_file = testi18n/locale/testi18n.pot

[compile_catalog]
directory = testi18n/locale

[update_catalog]
input_file = testi18n/locale/testi18n.pot
output_dir = testi18n/locale
